--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ url: "http://ibeliever.github.io" # the base hostname & protocol for your site
 twitter_username: iBeliever316
 github_username:  iBeliever
 
+permalink: /:year/:month/:title
+
 # Build settings
 markdown: kramdown
 
